--- a/src/app/pages/binnaclecaregiver/binnaclecaregiver.component.html
+++ b/src/app/pages/binnaclecaregiver/binnaclecaregiver.component.html
@@ -12,6 +12,15 @@
 
     <div class="container">
 
+        <div class="row text-right">
+            <div class="col">
+                <button class="btn btn-info" routerLink="/binnaclescaregiver/{{caregiver._id}}">
+                <i class="fa fa-list"></i>
+                Ver Historial
+              </button>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-sm-12">
                 <div class="form-group">
