--- a/src/app/pages/binnaclesactivitypatient/binnaclesactivitypatient.component.html
+++ b/src/app/pages/binnaclesactivitypatient/binnaclesactivitypatient.component.html
@@ -9,14 +9,14 @@
         </div>
     </div>
     <div class="container-fluid">
-        <div class="row text-right">
+        <!-- <div class="row text-right">
             <div class="col">
                 <button class="btn btn-danger" routerLink="/patients">
                   <i class="fa fa-arrow-left"></i>
                   Regresar
               </button>
             </div>
-        </div>
+        </div> -->
 
         <div class="row animated fadeIn faster">
             <div class="col">
@@ -24,6 +24,7 @@
                 <div class="row animated fadeIn faster col-sm-12">
                     <h3 class="card-header">Bitácoras registradas</h3>
 
+                    <pagination-controls (pageChange)="p = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -34,7 +35,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let b of binnacles">
+                            <tr *ngFor="let b of binnacles | paginate: {itemsPerPage: 10, currentPage: p, totalItems: binnacles.length};">
                                 <td>{{b.date | date:"dd-MM-yyyy" }}</td>
                                 <td>{{b.activity.type}}</td>
                                 <td>{{b.activity.activity}}</td>
