Se separó las actividades en casa de la bitácora del adulto

--- a/src/app/pages/binnaclepatient/binnaclepatient.component.html
+++ b/src/app/pages/binnaclepatient/binnaclepatient.component.html
@@ -12,7 +12,7 @@
 
     <div class="container-fluid">
 
-        <div class="row animated fadeIn faster">
+        <!-- <div class="row animated fadeIn faster">
             <div class="col">
                 <button class="btn btn-info" routerLink="/binnaclesactivitypatient/{{patient._id}}">
                     <i class="fa fa-list"></i>
@@ -45,7 +45,7 @@
                     </tbody>
                 </table>
             </div>
-        </div>
+        </div> -->
 
         <br>
 
