--- a/src/app/pages/binnaclepatientevaluation/binnaclepatientevaluation.component.html
+++ b/src/app/pages/binnaclepatientevaluation/binnaclepatientevaluation.component.html
@@ -12,7 +12,7 @@
 
         <div class="row text-right">
             <div class="col">
-                <button class="btn btn-danger" routerLink="/binnaclepatient">
+                <button class="btn btn-danger" routerLink="/activitiespatient">
         <i class="fa fa-arrow-left"></i>
         Regresar
       </button>
