Títulos de bitácoras

--- a/src/app/pages/binnaclecaregiver/binnaclecaregiver.component.html
+++ b/src/app/pages/binnaclecaregiver/binnaclecaregiver.component.html
@@ -5,12 +5,12 @@
 <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header text-center">Bitácora del Cuidador</h1>
+            <h1 class="page-header">Bitácora del Cuidador</h1>
             <!-- <h2>{{caregiver.name}} {{caregiver.lastName}} {{caregiver.lastNameSecond}}</h2> -->
         </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
 
         <div class="row text-right">
             <div class="col">
