--- a/src/app/pages/activitiespatient/activitiespatient.component.html
+++ b/src/app/pages/activitiespatient/activitiespatient.component.html
@@ -5,7 +5,7 @@
 <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Bitácora del Adulto</h1>
+            <h1 class="page-header">Actividades en Casa</h1>
             <!-- <h2>{{caregiver.patient.name}} {{caregiver.patient.lastName}} {{caregiver.patient.lastNameSecond}}</h2> -->
         </div>
     </div>
