--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -47,7 +47,7 @@
         <li routerLinkActive="active"><a routerLink="/binnaclecaregiver"><em class="fa fa-vcard-o">&nbsp;</em> Mi Bitácora </a></li>
         <li routerLinkActive="active"><a routerLink="/binnaclepatient"><em class="fa fa-vcard">&nbsp;</em> Bitácora Adulto </a></li>
         <li routerLinkActive="active"><a routerLink="/dailyrecordspatient"><em class="fa fa-clipboard">&nbsp;</em> Registros diarios </a></li>
-        <li routerLinkActive="active"><a routerLink="/charts"><em class="fa fa-line-chart">&nbsp;</em> Gráficas de datos </a></li>
+        <!-- <li routerLinkActive="active"><a routerLink="/charts"><em class="fa fa-line-chart">&nbsp;</em> Gráficas de datos </a></li> -->
         <li routerLinkActive="active"><a routerLink="/activitiespatient"><em class="fa fa-tasks">&nbsp;</em> Actividades en casa </a></li>
         <li routerLinkActive="active"><a routerLink="/autodiagnosis"><em class="fa fa-edit">&nbsp;</em> Valoración Psicológica </a></li>
         <li routerLinkActive="active"><a routerLink="/changepass"><em class="fa fa-gear">&nbsp;</em> Cambiar Contraseña </a></li>
