--- a/src/app/pages/patients/patients.component.html
+++ b/src/app/pages/patients/patients.component.html
@@ -35,6 +35,9 @@
                     <td>{{ patient.birthdate |date:"dd-MM-yyyy" }}</td>
                     <td>{{ patient.phase }}</td>
                     <td>
+                        <!-- <button class="btn btn-info mr-1" data-toggle="tooltip" data-placement="top" title="Editar" [routerLink]="['/patient', patient._id ]">
+                            <i class="fa fa-pencil"></i>
+                        </button> -->
                         <button class="btn btn-info mr-1" data-toggle="tooltip" data-placement="top" title="Bitácora" [routerLink]="['/binnaclespatient', patient._id ]">
                             <i class="fa fa-address-card"></i>
                         </button>
