--- a/src/app/pages/valorationsdetail/valorationsdetail.component.html
+++ b/src/app/pages/valorationsdetail/valorationsdetail.component.html
@@ -3,7 +3,8 @@
 <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Instrumentos realizados</h1>
+            <h1 class="page-header">Valoraciones realizadas</h1>
+            <h2>{{val.period}} {{val.year}}</h2>
         </div>
     </div>
 
@@ -24,8 +25,8 @@
                 <div class="form-group">
                     <label for="type">Familiar:</label>
                     <select class="form-control" id="caregivers" (change)="onChange($event.target.value)">
-                        <option *ngFor="let c of caregivers" 
-                        value={{c._id}}>{{c.name}} {{c.lastName}} {{c.lastNameSecond}}</option>
+                        <option *ngFor="let c of caregiversList" 
+                        value={{c.id}}>{{c.name}} {{c.lastName}} {{c.lastNameSecond}}</option>
                     </select>
                 </div>
             </div>
