--- a/src/app/pages/patients/patients.component.html
+++ b/src/app/pages/patients/patients.component.html
@@ -38,6 +38,9 @@
                         <!-- <button class="btn btn-info mr-1" data-toggle="tooltip" data-placement="top" title="Editar" [routerLink]="['/patient', patient._id ]">
                             <i class="fa fa-pencil"></i>
                         </button> -->
+                        <button class="btn btn-info mr-1" data-toggle="tooltip" data-placement="top" title="Cambio Fase" [routerLink]="['/phase', patient._id ]">
+                            <i class="fa fa-pencil"></i>
+                        </button>
                         <button class="btn btn-info mr-1" data-toggle="tooltip" data-placement="top" title="Bitácora" [routerLink]="['/binnaclespatient', patient._id ]">
                             <i class="fa fa-address-card"></i>
                         </button>
