--- a/src/app/pages/patients/patients.component.html
+++ b/src/app/pages/patients/patients.component.html
@@ -41,12 +41,15 @@
                         <button class="btn btn-info mr-1" data-toggle="tooltip" data-placement="top" title="Cambio Fase" [routerLink]="['/phase', patient._id ]">
                             <i class="fa fa-pencil"></i>
                         </button>
-                        <button class="btn btn-info mr-1" data-toggle="tooltip" data-placement="top" title="Bitácora" [routerLink]="['/binnaclespatient', patient._id ]">
+                        <button class="btn btn-info mr-1" data-toggle="tooltip" data-placement="top" title="Evaluaciones" [routerLink]="['/evaluation', patient._id ]">
+                            <i class="fa fa-address-card"></i>
+                        </button>
+                        <!-- <button class="btn btn-info mr-1" data-toggle="tooltip" data-placement="top" title="Bitácora" [routerLink]="['/binnaclespatient', patient._id ]">
                             <i class="fa fa-address-card"></i>
                         </button>
                         <button class="btn btn-primary mr-1" data-toggle="tooltip" data-placement="top" title="Actividades" [routerLink]="['/binnaclesactivitypatient', patient._id ]">
                             <i class="fa fa-calendar"></i>
-                        </button>
+                        </button> -->
                         <button class="btn btn-danger mr-1" data-toggle="tooltip" data-placement="top" title="Baja Paciente" (click)="bajaPatient( patient, i )">
                             <i class="fa fa-arrow-down"></i>
                         </button>
