--- a/src/app/pages/evaluation/evaluation.component.html
+++ b/src/app/pages/evaluation/evaluation.component.html
@@ -77,7 +77,7 @@
 
             <div class="col-sm-3">
               <div class="form-group">
-                <label>Score</label>
+                <label>Puntuación</label>
                 <input type="text" [(ngModel)]="evaluation.score" name="score" id="score" class="form-control">
               </div>
             </div>
@@ -107,6 +107,7 @@
                   <th scope="col">Fase</th>
                   <th scope="col">Evaluación</th>
                   <th scope="col">Puntuación</th>
+                  <th scope="col">Opciones</th>
               </tr>
           </thead>
           <tbody>
@@ -115,6 +116,11 @@
                   <td>{{ep.patientPhase }}</td>
                   <td>{{ep.evaluationName}}</td>
                   <td>{{ep.score}}</td>
+                  <td>
+                    <button class="btn btn-danger mr-1" (click)="bajaEvaluation( ep, i )">
+                      <i class="fa fa-close"></i>
+                  </button>
+                </td>
               </tr>
           </tbody>
       </table> 
